Change autoencoder schema img

--- a/shared/latex/en/nn/ae/autoencoder.tex
+++ b/shared/latex/en/nn/ae/autoencoder.tex
@@ -1,5 +1,5 @@
 \begin{frame}{General principle}
-  \V{["img/autoencoder-schema", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/ae/en-autoencoder-schema", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Linear auto-encoder}
