--- a/shared/latex/nn/ae/autoencoder.tex
+++ b/shared/latex/nn/ae/autoencoder.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Schéma général}
-  \V{["img/autoencoder-schema", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/ae/autoencoder-schema", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Cas linéaire}
