Transfer residuals plots from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/supervised/regression-polynomiale.tex
+++ b/shared/latex/supervised/regression-polynomiale.tex
@@ -1,12 +1,12 @@
 
 \begin{frame}{Régression polynômiale}
   Limites de la regression linéaire
-  \V{["img/residuals-1-nzmog", "tw", 1] | image}
+  \V{["plt/residuals-1", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Régression polynômiale}
   Limites de la regression linéaire
-  \V{["img/residuals-2-nzmog", "tw", 1] | image}
+  \V{["plt/residuals-2", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Exemple de régressions polynômiales}
