Add autoencoder stacked img

--- a/shared/latex/nn/ae/autoencoder.tex
+++ b/shared/latex/nn/ae/autoencoder.tex
@@ -11,7 +11,7 @@
 \begin{frame}{Auto-encodeurs profonds}
   Aussi appelées auto-encodeurs empilés.
 
-  \V{["img/autoencoder-stacked", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/ae/autoencoder-stacked", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs débruiteurs}
