--- a/shared/latex/en/nn/ae/autoencoder.tex
+++ b/shared/latex/en/nn/ae/autoencoder.tex
@@ -11,7 +11,7 @@
 \begin{frame}{Deep auto-encoder}
   Also called stacked auto-encoders (even though they were known for a specific training method that is not used anymore).
 
-  \V{["img/autoencoder-stacked", "tw", 0.9] | image}
+  \V{["tikz/neural-networks/ae/autoencoder-stacked", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Denoising auto-encoder}
