Transfer overfitting plot from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/regularisation.tex
+++ b/shared/latex/nn/regularisation.tex
@@ -1,6 +1,6 @@
 \begin{frame}
   \frametitle{Sur-apprentissage (et sous-apprentissage)}
-  \V{["img/overfitting-train-nzmog", "tw", 0.8] | image}
+  \V{["plt/overfitting-train", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Par la pénalisation de l'utilisation des paramètres}
