--- a/shared/latex/ml/learning.tex
+++ b/shared/latex/ml/learning.tex
@@ -38,7 +38,7 @@
     \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \V{["img/overfitting-train-nzmog", "th", 0.3] | image}
+    \V{["plt/overfitting-train", "th", 0.3] | image}
   \end{minipage}\hfill
   Techniques variées en fonction du modèle :
   \begin{itemize}
