Tweak help pointers
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/help-pointers.tex
+++ b/shared/latex/nn/help-pointers.tex
@@ -1,8 +1,5 @@
 
-\begin{frame}
-    \frametitle{NN}
-    \begin{center}
-        \bluelink{https://fr.coursera.org/projects/multi-task-models-keras}{Modèles multi-tâches sur Coursera}   
-    \end{center}
+\begin{frame}{Ressource complémentaires}
+    \bluelink{https://fr.coursera.org/projects/multi-task-models-keras}{Modèles multi-tâches sur Coursera}   
 \end{frame}
 
