--- a/shared/latex/prerequisites/help-pointers.tex
+++ b/shared/latex/prerequisites/help-pointers.tex
@@ -1,19 +1,17 @@
 
-\begin{frame}
-    \frametitle{Algèbre}
-    \begin{center}
-        \bluelink{https://www.youtube.com/watch?v=dII7myZuLvo}{Le produit scalaire} \\
-        \bluelink{https://fr.wikipedia.org/wiki/Produit_matriciel\#Produit_matriciel_ordinaire}{Le produit matriciel} \\
-        \bluelink{https://www.youtube.com/watch?v=MU11v25gnnM}{Vecteurs propres}
-    \end{center}
+\begin{frame}{Ressources complémentaires --- Algèbre}
+    \begin{itemize}
+        \item \bluelink{https://youtu.be/dII7myZuLvo}{Le produit scalaire}
+        \item \bluelink{https://fr.wikipedia.org/wiki/Produit_matriciel\#Produit_matriciel_ordinaire}{Le produit matriciel}
+        \item \bluelink{https://youtu.be/MU11v25gnnM}{Vecteurs propres}
+    \end{itemize}
 \end{frame}
 
-\begin{frame}
-    \frametitle{Statistiques}
-    \begin{center}
-        \bluelink{https://www.youtube.com/watch?v=dZ1arqz41Bg}{Statistiques - bases} \\
-        \bluelink{https://fr.wikipedia.org/wiki/Covariance}{Covariance} \\
-        \bluelink{https://fr.wikipedia.org/wiki/Corr\%C3\%A9lation_(statistiques)}{Corrélation} 
-    \end{center}
+\begin{frame}{Ressources complémentaires --- Statistiques}
+    \begin{itemize}
+        \item \bluelink{https://youtu.be/dZ1arqz41Bg}{Statistiques - bases}
+        \item \bluelink{https://fr.wikipedia.org/wiki/Covariance}{Covariance}
+        \item \bluelink{https://fr.wikipedia.org/wiki/Corr\%C3\%A9lation_(statistiques)}{Corrélation} 
+    \end{itemize}
 \end{frame}
 
