--- a/shared/latex/ml/help-pointers.tex
+++ b/shared/latex/ml/help-pointers.tex
@@ -1,9 +1,6 @@
-
-\begin{frame}
-    \frametitle{Prétraitements}
-    \begin{center}
-        \bluelink{http://www.xavierdupre.fr/app/papierstat/helpsphinx/lectures/preprocessing.html}{Les prétraitements} \\
-        \bluelink{http://www.xavierdupre.fr/app/papierstat/helpsphinx/notebooks/artificiel_normalisation.html}{La Normalisation en particulier} 
-    \end{center}
+\begin{frame}{Ressources complémentaires}
+    \begin{itemize}
+      \item \bluelink{http://www.xavierdupre.fr/app/papierstat/helpsphinx/lectures/preprocessing.html}{Les prétraitements}
+      \item \bluelink{http://www.xavierdupre.fr/app/papierstat/helpsphinx/notebooks/artificiel_normalisation.html}{La normalisation en particulier}
+    \end{itemize}
 \end{frame}
-
