--- a/shared/latex/nlp/help-pointers.tex
+++ b/shared/latex/nlp/help-pointers.tex
@@ -1,10 +1,8 @@
 
-\begin{frame}
-    \frametitle{NLP}
-    \begin{center}
-        \bluelink{https://www.youtube.com/watch?v=AcqlkoI3VEo}{Word Embeddings} \\
-        \bluelink{https://huggingface.co/}{Un dépôt de modèles modernes de langages déjà appris} \\
-        \bluelink{https://www.tensorflow.org/text/tutorials/transformer}{Un tutoriel de modèles à attention} 
-    \end{center}
+\begin{frame}{Ressources complémentaires}
+    \begin{itemize}
+        \item \bluelink{https://youtu.be/AcqlkoI3VEo}{Word embeddings}
+        \item \bluelink{https://huggingface.co/}{Dépôt de modèles modernes de langages déjà appris}
+        \item \bluelink{https://www.tensorflow.org/text/tutorials/transformer}{Un tutoriel de modèles à attention} 
+    \end{itemize}
 \end{frame}
-
