--- a/shared/latex/nn/cnn/help-pointers.tex
+++ b/shared/latex/nn/cnn/help-pointers.tex
@@ -1,8 +1,4 @@
 
-\begin{frame}
-    \frametitle{Vision}
-    \begin{center}
-        \bluelink{https://keras.io/examples/vision/image_classification_with_vision_transformer/}{Image Transformer} 
-    \end{center}
+\begin{frame}{Ressources complémentaires}
+    \bluelink{https://keras.io/examples/vision/image_classification_with_vision_transformer/}{Image Transformer} 
 \end{frame}
-
