--- a/shared/latex/unsupervised/anomaly-detection/help-pointers.tex
+++ b/shared/latex/unsupervised/anomaly-detection/help-pointers.tex
@@ -1,9 +1,6 @@
-
-\begin{frame}
-    \frametitle{Détection d'anomalies}
-    \begin{center}
-        \bluelink{https://blog.ysance.com/algorithme-n3-comprendre-lisolation-forest-en-5-min}{Isolation forest} \\
-        \bluelink{https://www.kaggle.com/robinteuwens/anomaly-detection-with-auto-encoders}{Avec des réseaux de neurones}   
-    \end{center}
+\begin{frame}{Ressources complémentaires}
+    \begin{itemize}
+        \item \bluelink{https://blog.ysance.com/algorithme-n3-comprendre-lisolation-forest-en-5-min}{Isolation forest}
+        \item \bluelink{https://www.kaggle.com/robinteuwens/anomaly-detection-with-auto-encoders}{Avec des réseaux de neurones}
+    \end{itemize}
 \end{frame}
-
