--- a/shared/latex/unsupervised/dimensionality-reduction/help-pointers.tex
+++ b/shared/latex/unsupervised/dimensionality-reduction/help-pointers.tex
@@ -1,8 +1,3 @@
-
-\begin{frame}
-    \frametitle{ACP}
-    \begin{center}
-        \bluelink{https://www.youtube.com/watch?v=KrNbyM925wI}{François Husson} \\
-    \end{center}
+\begin{frame}{Ressources complémentaires}
+    \bluelink{https://youtu.be/KrNbyM925wI}{ACP par François Husson}
 \end{frame}
-
