Transfer AUC plot from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/orsys/INTRA/2021-12-candriam/latex/ml/evaluation.tex
+++ b/orsys/INTRA/2021-12-candriam/latex/ml/evaluation.tex
@@ -130,7 +130,7 @@
       \end{itemize}
     \end{column}
     \begin{column}{0.52\linewidth}
-      \V{["img/auc-nzmog", "tw", 1] | image}
+      \V{["plt/auc", "tw", 1] | image}
     \end{column}
   \end{columns}
 \end{frame}
