Transfer data augmention from Colab to deckz & fix some minor things in figures
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/nn/regularization.tex
+++ b/shared/latex/en/nn/regularization.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Overfit (and underfit)}
 
-  \V{["img/overfitting-nzmog-en", "tw", 1, "en"] | image}
+  \V{["plt/overfitting-en", "tw", 1, "en"] | image}
 \end{frame}
 
 \begin{frame}{Weight penalty}
@@ -29,7 +29,7 @@
 \end{frame}
 
 \begin{frame}{Data augmentation}
-  \V{["img/data-augmentation-nzmog-en", "tw", 1.0] | image}
+  \V{["plt/data-augmentation-en", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}{Dropout}
