--- a/shared/latex/nn/regularisation.tex
+++ b/shared/latex/nn/regularisation.tex
@@ -24,7 +24,7 @@
 \end{frame}
 
 \begin{frame}{Par augmentation/bruitage des données}
-  \V{["img/data-augmentation-nzmog", "tw", 1.0] | image}
+  \V{["plt/data-augmentation", "tw", 1.0] | image}
 \end{frame}
 
 \begin{frame}{Par dropout}
