Transfer distplot from Colab to deckz, rename it to histplot
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/data-preparation.tex
+++ b/shared/latex/en/ml/data-preparation.tex
@@ -189,8 +189,8 @@
   \V{["img/countplot-nzmog", "th", 0.7, "en"] | image}
 \end{frame}
 
-\begin{frame}{Plotting — Dist plot}
-  \V{["img/distplot-nzmog", "th", 0.7, "en"] | image}
+\begin{frame}{Plotting — Histogram}
+  \V{["plt/histplot-en", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Plotting — Q-Q plot}
