--- a/shared/latex/ml/data-preparation.tex
+++ b/shared/latex/ml/data-preparation.tex
@@ -191,7 +191,7 @@
 \end{frame}
 
 \begin{frame}{Outils — dist plot}
-  \V{["img/distplot-nzmog", "th", 0.7] | image}
+  \V{["plt/histplot", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Outils — qq plot}
