Transfer QQ plot, distplot with gaussian fit and correlation matrix from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/data-preparation.tex
+++ b/shared/latex/en/ml/data-preparation.tex
@@ -194,7 +194,7 @@
 \end{frame}
 
 \begin{frame}{Plotting — Q-Q plot}
-  \V{["img/qqplot-nzmog", "th", 0.5, "en"] | image}
+  \V{["plt/qq-plot-en", "th", 0.5] | image}
   Not available in \bluelink{https://seaborn.pydata.org/}{\texttt{seaborn}}
   but in
   \bluelink{http://www.statsmodels.org/stable/index.html}{\texttt{statsmodel}}
@@ -219,7 +219,7 @@
 \end{frame}
 
 \begin{frame}{Plotting — Correlation matrix}
-  \V{["img/corrmat-nzmog", "th", 0.7, "en"] | image}
+  \V{["plt/corrmat-en", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Guidelines to explore a dataset}
