--- a/shared/latex/ml/data-preparation.tex
+++ b/shared/latex/ml/data-preparation.tex
@@ -194,8 +194,8 @@
   \V{["plt/histplot", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Outils — qq plot}
-  \V{["img/qqplot-nzmog", "th", 0.5] | image}
+\begin{frame}{Outils — Diagramme quantile-quantile}
+  \V{["plt/qq-plot", "th", 0.5] | image}
   Attention, pas \bluelink{https://seaborn.pydata.org/}{\texttt{seaborn}}
   mais
   \bluelink{http://www.statsmodels.org/stable/index.html}{\texttt{statsmodel}}
@@ -220,7 +220,7 @@
 \end{frame}
 
 \begin{frame}{Outils — correlation matrix}
-  \V{["img/corrmat-nzmog", "th", 0.7] | image}
+  \V{["plt/corrmat", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Mode opératoire}
