Add remaining exploration plots from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/data-preparation.tex
+++ b/shared/latex/en/ml/data-preparation.tex
@@ -190,7 +190,7 @@
 \end{frame}
 
 \begin{frame}{Plotting — Histogram}
-  \V{["plt/histplot-en", "th", 0.7] | image}
+  \V{["plt/histogram-en", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Plotting — Q-Q plot}
@@ -203,15 +203,15 @@
 \end{frame}
 
 \begin{frame}{Plotting — Bar plot}
-  \V{["img/barplot-nzmog", "th", 0.7, "en"] | image}
+  \V{["plt/bar-plot-en", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Plotting — Scatter plot}
-  \V{["img/scatter-nzmog", "th", 0.7, "en"] | image}
+  \V{["plt/scatter-plot-en", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Plotting — Violin plot}
-  \V{["img/violinplot-nzmog", "th", 0.7, "en"] | image}
+  \V{["plt/violin-plot-en", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Plotting — Pair plot}
