--- a/shared/latex/en/ml/intro.tex
+++ b/shared/latex/en/ml/intro.tex
@@ -64,7 +64,7 @@
 \begin{frame}{Example --- Univariate linear regression}
   Predict the value of a variable based on the value of another variable
 
-  \V{["img/regression-nzmog", "th", 0.65, "en"] | image}
+  \V{["plt/reg-plot-en", "th", 0.65] | image}
 \end{frame}
 
 \begin{frame}{Example --- Multivariate linear regression}
