--- a/shared/latex/en/supervised/linear-regression.tex
+++ b/shared/latex/en/supervised/linear-regression.tex
@@ -11,5 +11,5 @@
 \end{frame}
 
 \begin{frame}{Visualization}
-  \V{["img/regression-nzmog", "th", 0.7, "en"] | image}
+  \V{["plt/reg-plot-en", "th", 0.7] | image}
 \end{frame}
