--- a/shared/latex/ml/data-preparation.tex
+++ b/shared/latex/ml/data-preparation.tex
@@ -190,8 +190,8 @@
   \V{["img/countplot-nzmog", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Outils — dist plot}
-  \V{["plt/histplot", "th", 0.7] | image}
+\begin{frame}{Outils — Histogramme}
+  \V{["plt/histogram", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Outils — Diagramme quantile-quantile}
@@ -203,30 +203,30 @@
   \bluelink{https://docs.scipy.org/doc/scipy/reference/stats.html}{\texttt{scipy.stats}}.
 \end{frame}
 
-\begin{frame}{Outils — bar plot}
-  \V{["img/barplot-nzmog", "th", 0.7] | image}
+\begin{frame}{Outils — Nuage de points}
+  \V{["plt/scatter-plot", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Outils — scatter plot}
-  \V{["img/scatter-nzmog", "th", 0.7] | image}
+\begin{frame}{Outils — Diagramme en bâtons}
+  \V{["plt/bar-plot", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Outils — violin plot}
-  \V{["img/violinplot-nzmog", "th", 0.7] | image}
+\begin{frame}{Outils — Diagramme en violons}
+  \V{["plt/violin-plot", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Outils — pair plot}
   \V{["img/pairplot-nzmog", "th", 0.7] | image}
 \end{frame}
 
-\begin{frame}{Outils — correlation matrix}
+\begin{frame}{Outils — Matrice de corrélation}
   \V{["plt/corrmat", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Mode opératoire}
   Bonnes pratiques pour explorer un dataset :
   \begin{itemize}[<+->]
-  \item analyser la(es) variable(s) de sortie (countplot/distplot)
+  \item analyser la(es) variable(s) de sortie (diagramme de décompte ou histogramme)
   \item trouver les corrélations linéaires les plus fortes
   \item analyser les variables correspondantes
   \item regarder s'il y a des outliers évidents dans ces variables
