--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -64,7 +64,7 @@
 \begin{frame}{Exemple --- Régression linéaire}
   Prédire une valeur en fonction d'une autre.
 
-  \V{["img/regression-nzmog", "th", 0.65] | image}
+  \V{["plt/reg-plot", "th", 0.65] | image}
 \end{frame}
 
 \begin{frame}{Exemple --- Régression linéaire multiple}
