--- a/shared/latex/supervised/regression-lineaire.tex
+++ b/shared/latex/supervised/regression-lineaire.tex
@@ -10,5 +10,5 @@
 \end{frame}
 
 \begin{frame}{Visualisation}
-  \V{["img/regression-nzmog", "th", 0.7] | image}
+  \V{["plt/reg-plot", "th", 0.7] | image}
 \end{frame}
