--- a/shared/latex/en/supervised/cost-error-function.tex
+++ b/shared/latex/en/supervised/cost-error-function.tex
@@ -21,7 +21,7 @@
     \[
       \hat{y} = ax + b
     \]
-  \V{["img/regression-nzmog", "tw", 1, "en"] | image}
+  \V{["plt/reg-plot-en", "tw", 1] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
     \[
