--- a/shared/latex/supervised/cost-error-function.tex
+++ b/shared/latex/supervised/cost-error-function.tex
@@ -22,7 +22,7 @@
     \[
       \hat{y_i} = \theta_0 + \theta_1 x_i
     \]
-    \V{["img/regression-nzmog", "tw", 1] | image}
+    \V{["plt/reg-plot", "tw", 1] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
     $\boxed{E = \frac{1}{2n}\sum_{i=1}^n( \hat{y_i} - y_i )^2}$ \\
