Transfer gradient descent plot from plotly on Colab to matplotlib on deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/prerequisites/calculus.tex
+++ b/shared/latex/en/ml/prerequisites/calculus.tex
@@ -31,5 +31,5 @@
 
 \begin{frame}{Multivariate case}
   Use of partial derivatives instead of derivatives. Same principle:
-  \V{["img/gradient-nzmog", "th", 0.65, "en"] | image}
+  \V{["plt/gradient-descent-en", "th", 0.65] | image}
 \end{frame}
