--- a/shared/latex/prerequisites/calculus.tex
+++ b/shared/latex/prerequisites/calculus.tex
@@ -1,11 +1,8 @@
-
-\begin{frame}
-  \frametitle{Utilité}
+\begin{frame}{Utilité}
   Souvent besoin de minimiser une fonction en machine learning.
 \end{frame}
 
-\begin{frame}
-  \frametitle{Idée clef}
+\begin{frame}{Idée clef}
 
   Décider d'un $x$ de départ puis suivre la pente jusqu'au minimum.
 
@@ -15,24 +12,21 @@
     de la dérivée.}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Pente positive}
+\begin{frame}{Pente positive}
 
   \V{["img/positive-slope", "tw", 0.8] | image}
 
   Opposé de la pente = $-2$. Avec un pas de $0,1$, on passe de $1$ à $0,8$.
 \end{frame}
 
-\begin{frame}
-  \frametitle{Pente négative}
+\begin{frame}{Pente négative}
 
   \V{["img/negative-slope", "tw", 0.8] | image}
 
   Opposé de la pente = $2$. Avec un pas de $0,1$, on passe de $-1$ à $-0,8$.
 \end{frame}
 
-\begin{frame}
-  \frametitle{Exemple en 2 dimensions}
-  dérivée → gradient
-  \V{["img/gradient-nzmog", "th", 0.65] | image}
+\begin{frame}{Exemple en 2 dimensions}
+  Dérivée → gradient
+  \V{["plt/gradient-descent", "th", 0.65] | image}
 \end{frame}
