--- a/shared/latex/en/nn/gradient-descent.tex
+++ b/shared/latex/en/nn/gradient-descent.tex
@@ -13,7 +13,7 @@
       where $0 < \gamma < 1$ (learning rate)
     \end{column}
     \begin{column}{0.5\textwidth}
-      \V{["img/gradient-nzmog", "tw", 1, "en"] | image}
+      \V{["plt/gradient-descent-en", "tw", 1] | image}
     \end{column}
   \end{columns}
 \end{frame}
