Transfer batch methods from plotly on Colab to matplotlib on deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/optimize.tex
+++ b/shared/latex/nn/optimize.tex
@@ -40,7 +40,7 @@
 \end{frame}
 
 \begin{frame}{Taille du batch}
-  \V{["img/batch-size-effect-nzmog", "tw", 0.8] | image}
+  \V{["plt/batch-size-effect", "tw", 0.8] | image}
   Usuellement, des puissances de 2, pour optimiser les ressources GPU
 \end{frame}
 
