Transfer gradient clipping plot from plotly on Colab to matplotlib on deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/deep-optimize.tex
+++ b/shared/latex/nn/deep-optimize.tex
@@ -23,7 +23,7 @@
 
 \begin{frame}{Explosion des gradients}
   Exploding Gradient $\Rightarrow$ Gradient clipping
-  \V{["img/gradient-clipping-nzmog", "th", 0.5] | image}
+  \V{["plt/gradient-clipping", "th", 0.5] | image}
   Dans le cadre des réseaux réccurents $\Rightarrow$ initialisation avec des matrices orthogonales
 \end{frame}
 
