Transfer SVM plot from plotly on Colab to matplotlib on deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/supervised/svm.tex
+++ b/shared/latex/supervised/svm.tex
@@ -1,40 +1,32 @@
-\begin{frame}
-  \frametitle{Support Vector Machine}
+\begin{frame}{Support Vector Machine}
   \V{["img/separable-problem-linear-nzmog", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Support Vector Machine}
+\begin{frame}{Support Vector Machine}
   \V{["img/separable-problem-linear-solution-nzmog", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Support Vector Machine}
+\begin{frame}{Support Vector Machine}
   \V{["img/separable-problem-linear-solution-bad-nzmog", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Support Vector Machine}
+\begin{frame}{Support Vector Machine}
   \V{["img/svm-schema-nzmog", "tw", 0.8] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Support Vector Machine}
+\begin{frame}{Support Vector Machine}
   \V{["img/svm-schema-nzmog", "tw", 0.9] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Support Vector Machine}
-  \V{["img/separable-problem-nonlinear-solution-nzmog", "th", 0.75] | image}
+\begin{frame}{Support Vector Machine}
+  \V{["plt/separable-problem-nonlinear-solution", "th", 0.75] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Support Vector Machine}
-  \V{["img/separable-problem-nonlinear-kernelsvm-nzmog", "th", 0.75] | image}
+\begin{frame}{Support Vector Machine}
+  \V{["plt/separable-problem-nonlinear-kernelsvm", "th", 0.75] | image}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Support Vector Machine}
+\begin{frame}{Support Vector Machine}
   Généralisation à un problème de régression logistique à $K>2$ classes :
   \begin{itemize}
   \item One Vs All : K modèles. Agréagation par meilleur score.
