Transfer data science word cloud from Colab to deckz
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/intro.tex
+++ b/shared/latex/en/ml/intro.tex
@@ -1,5 +1,5 @@
 \begin{frame}{A vast field}
-  \V{["img/data-science-nzmog-en", "tw", 0.9] | image}
+  \V{["plt/data-science-en", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Name hierarchy}
