--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Un domaine vaste}
-  \V{["img/data-science-nzmog", "tw", 0.9] | image}
+  \V{["plt/data-science", "th", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Hiérarchie des noms}
