create img/ms-coco.yml; delete logos/amazon.yml;replace img/visual-cortex;create img/visual-cortex.yml

--- a/shared/latex/en/nn/cnn/model.tex
+++ b/shared/latex/en/nn/cnn/model.tex
@@ -72,7 +72,7 @@
 
 \begin{frame}{Visual cortex architecture}
   \begin{minipage}[l]{0.50\linewidth}
-    \V{["img/visual-cortex-en", "tw", 1.0] | image}
+    \V{["img/visual-cortex", "tw", 1.0] | image}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
     Layered connections:
