--- a/shared/latex/tf-keras/tf.tex
+++ b/shared/latex/tf-keras/tf.tex
@@ -71,7 +71,7 @@
     \end{center}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
-    \V{["img/tensorflow", "th", 0.9] | image}
+    \V{["img/tensorflow-graph", "th", 0.9] | image}
   \end{minipage}\hfill
 \end{frame}
 
