Changement image ingenierie ML + update .tex + del vieux png

--- a/shared/latex/engineering/engineering-practices.tex
+++ b/shared/latex/engineering/engineering-practices.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Pipeline d'un projet de Machine Learning}
-  \V{["img/ml-craftmanship", "tw", 0.8] | image}
+  \V{["tikz/ml/ml-ingenierie", "th", 0.75] | image}
 \end{frame}
 
 \begin{frame}{Complexification des solutions : retours dégressifs}
