--- a/shared/latex/en/ml/data-preparation.tex
+++ b/shared/latex/en/ml/data-preparation.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Introduction}
-  \V{["img/ml-craftmanship", "tw", 0.8] | image}
+  \V{["tikz/ml/ml-ingenierie", "th", 0.75] | image} 
 \end{frame}
 
 
