--- a/shared/latex/en/ml/intro.tex
+++ b/shared/latex/en/ml/intro.tex
@@ -21,7 +21,7 @@
 \end{frame}
 
 \begin{frame}{Engineering}
-  \V{["img/ml-craftmanship", "tw", 0.8] | image}
+  \V{["tikz/ml/ml-ingenierie", "th", 0.75] | image}
 \end{frame}
 
 \begin{frame}{Raw material: data}
