--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -15,7 +15,7 @@
 \end{frame}
 
 \begin{frame}{Ingénierie}
-  \V{["img/ml-craftmanship", "tw", 0.8] | image}
+  \V{["tikz/ml/ml-ingenierie", "th", 0.75] | image}
 \end{frame}
 
 \begin{frame}{Matière première~: les données}
