--- a/shared/latex/en/tf-keras/tf.tex
+++ b/shared/latex/en/tf-keras/tf.tex
@@ -62,18 +62,7 @@
 \end{frame}
 
 \begin{frame}{Computation graph}
-  \begin{minipage}[l]{0.15\linewidth}
-      $\;$
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.35\linewidth}
-    \huge
-    \begin{center}
-      $\pi*r^2\;\;\;\rightarrow$
-    \end{center}
-  \end{minipage}\hfill
-  \begin{minipage}[l]{0.49\linewidth}
-    \V{["img/tensorflow-graph", "th", 0.9] | image}
-  \end{minipage}\hfill
+  \V{["tikz/tf-graph", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Computation graph}
