replace img/anomaly-modes by an awesome and qualitative slide

--- a/shared/latex/unsupervised/anomaly-detection/intro.tex
+++ b/shared/latex/unsupervised/anomaly-detection/intro.tex
@@ -15,7 +15,11 @@
 \end{frame}
 
 \begin{frame}{Paradigmes}
-  \V{["img/anomaly-modes", "tw", 0.8] | image}
+  \begin{itemize}
+    \item supervisé
+    \item non-supervisé
+    \item semi-supervisé
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Supervisé}
