modif imgs ia-ml-deep et car-dashboard

--- a/shared/latex/en/ml/intro.tex
+++ b/shared/latex/en/ml/intro.tex
@@ -3,7 +3,7 @@
 \end{frame}
 
 \begin{frame}{Name hierarchy}
-  \V{["img/ia-ml-deep", "th", 0.8] | image}
+  \V{["tikz/ml/ia-ml-deep", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Machine Learning}
