--- a/shared/latex/ml/intro.tex
+++ b/shared/latex/ml/intro.tex
@@ -3,7 +3,7 @@
 \end{frame}
 
 \begin{frame}{Hiérarchie des noms}
-  \V{["img/ia-ml-deep", "th", 0.8] | image}
+  \V{["tikz/ml/ia-ml-deep", "th", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Machine Learning}
