move tikz/neural-networks/cnn/deep-auto-encoder to tikz/neural-networks/ae; add it to shared/latex/nn/ae/autoencoder.tex; clean shared/tikz/neural-networks/cnn/

--- a/shared/latex/nn/ae/autoencoder.tex
+++ b/shared/latex/nn/ae/autoencoder.tex
@@ -4,7 +4,11 @@
 
 \begin{frame}{Cas linéaire}
   Activations linéaires et fonction de perte moindre carrés $\approx$ ACP
-  \V{["img/pca-nuage", "tw", 0.6] | image}
+  \V{["img/pca-nuage", "tw", 0.5] | image}
+\end{frame}
+
+\begin{frame}{Cas linéaire}
+  \V{["tikz/neural-networks/ae/deep-auto-encoder", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Auto-encodeurs profonds}
@@ -14,7 +18,6 @@
 
 \begin{frame}{Auto-encodeurs débruiteurs}
   \V{["tikz/neural-networks/ae/denoiser", "tw", 1.1] | image}
-
 \end{frame}
 
 \begin{frame}{Auto-encodeurs variationnels}
