change img/word2vec-analogy.png to tikz/nlp/word2vec-analogy.tex

--- a/shared/latex/nlp/wordembeddings.tex
+++ b/shared/latex/nlp/wordembeddings.tex
@@ -57,7 +57,7 @@
   
   \begin{frame}
     \frametitle{Word Embeddings} 
-    \V{["img/word2vec-analogy", "tw", 0.6] | image}
+    \V{["tikz/nlp/word2vec-analogy", "tw", 0.6] | image}
     \begin{center}
       \bluelink{https://projector.tensorflow.org/}{Visualisation de l'espace word2vec} \\
       \bluelink{http://vectors.nlpl.eu/repository/}{Word Embeddings à télécharger}
