Replace old slope plots with deckz managed ones
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/en/ml/prerequisites/calculus.tex
+++ b/shared/latex/en/ml/prerequisites/calculus.tex
@@ -17,14 +17,14 @@
 
 \begin{frame}{Positive derivative}
 
-  \V{["img/positive-slope", "tw", 0.8] | image}
+  \V{["plt/slope-positive-en", "tw", 0.8] | image}
 
   Opposite of the derivative = $-2$. With a factor of $0.1$, the current point goes from $1$ to $0.8$.
 \end{frame}
 
 \begin{frame}{Negative derivative}
 
-  \V{["img/negative-slope", "tw", 0.8] | image}
+  \V{["plt/slope-negative-en", "tw", 0.8] | image}
 
   Opposite of the derivative = $2$. With a factor of $0.1$, the current point goes from $-1$ to $-0.8$.
 \end{frame}
