--- a/shared/latex/prerequisites/calculus.tex
+++ b/shared/latex/prerequisites/calculus.tex
@@ -14,14 +14,14 @@
 
 \begin{frame}{Pente positive}
 
-  \V{["img/positive-slope", "tw", 0.8] | image}
+  \V{["plt/slope-positive", "tw", 0.8] | image}
 
   Opposé de la pente = $-2$. Avec un pas de $0,1$, on passe de $1$ à $0,8$.
 \end{frame}
 
 \begin{frame}{Pente négative}
 
-  \V{["img/negative-slope", "tw", 0.8] | image}
+  \V{["plt/slope-negative", "tw", 0.8] | image}
 
   Opposé de la pente = $2$. Avec un pas de $0,1$, on passe de $-1$ à $-0,8$.
 \end{frame}
