--- a/shared/latex/nlp/wordembeddings.tex
+++ b/shared/latex/nlp/wordembeddings.tex
@@ -52,12 +52,12 @@
   
   \begin{frame}
     \frametitle{Word Embeddings} 
-    \V{["img/word2vec", "tw", 1] | image}
+    \V{["tikz/nlp/cbow", "th", 0.75] | image}
   \end{frame}
   
   \begin{frame}
     \frametitle{Word Embeddings} 
-    \V{["tikz/nlp/word2vec-analogy", "tw", 0.6] | image}
+    \V{["tikz/nlp/word2vec-analogy", "tw", 0.5] | image}
     \begin{center}
       \bluelink{https://projector.tensorflow.org/}{Visualisation de l'espace word2vec} \\
       \bluelink{http://vectors.nlpl.eu/repository/}{Word Embeddings à télécharger}
