Tikz pour image tree-training-modes + yml

--- a/shared/latex/supervised/gradient-boosting.tex
+++ b/shared/latex/supervised/gradient-boosting.tex
@@ -1,13 +1,13 @@
 \begin{frame}
   \frametitle{Introduction}
   Arbres qui s'améliorent successivement.
-  \V{["img/tree-training-modes", "th", 0.4] | image}
+  \V{["tikz/tree/tree-training-modes", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}
   \frametitle{Idée à retenir}
   \begin{itemize}
-  \item séquence d'arbres qui s'entrainent à corriger les erreurs de
+  \item séquence d'arbres qui s'entraînent à corriger les erreurs de
     l'arbre d'avant
   \item modélisation de la correction de l'erreur par un pas de
     descente de gradient pour plus de flexibilité.
@@ -28,7 +28,7 @@
   \frametitle{Avantages}
   \begin{itemize}
   \item modèle extrêmement performant et versatile
-  \item entrainement parallélisable
+  \item entraînement parallélisable
   \end{itemize}
 \end{frame}
 
