Changements images + yml

--- a/shared/latex/actors/gafa.tex
+++ b/shared/latex/actors/gafa.tex
@@ -16,11 +16,65 @@
 \end{frame}
 
 \begin{frame}{La recherche académique}
-  \V{["img/citation-nips-2005-2016", "th", 0.85] | image}
+  \begin{minipage}{0.49\linewidth}   
+    \begin{itemize}
+      \item Ilya Suskever
+      \item Geoffrey Hinton
+      \item Alex Krizhevsky
+      \item Andrew Ng
+      \item David Blei
+      \item Yoshua Bengio
+      \item Jeff Dean
+      \item Kai Chen
+      \item Tomas Mikolov
+      \item Greg Corrado
+    \end{itemize}
+  \end{minipage}
+  \begin{minipage}{0.49\linewidth}
+    \begin{itemize}
+      \item Ruslan Salakhutdinov
+      \item Honglak Lee
+      \item Quoc V. Le
+      \item Bernhard Schalkopf
+      \item Francis Bach
+      \item Rob Fergus
+      \item Antonio Torralba
+      \item Hugo Larochelle
+      \item Pietro Perona
+      \item Alex Smola
+    \end{itemize}  
+  \end{minipage}
 \end{frame}
 
 \begin{frame}{La recherche académique privatisée}
-  \V{["img/citation-nips-2005-2016-team", "th", 0.85] | image}
+  \begin{minipage}{0.49\linewidth}   
+    \begin{itemize}
+      \item Ilya Suskever (Google)
+      \item Geoffrey Hinton (Google)
+      \item Alex Krizhevsky (Google)
+      \item Andrew Ng (BAIDU)
+      \item David Blei
+      \item Yoshua Bengio 
+      \item Jeff Dean (Google)
+      \item Kai Chen (Google)
+      \item Tomas Mikolov (Facebook)
+      \item Greg Corrado (Google)
+    \end{itemize}
+  \end{minipage}
+  \begin{minipage}{0.49\linewidth}
+    \begin{itemize}
+      \item Ruslan Salakhutdinov (Apple)
+      \item Honglak Lee
+      \item Quoc V. Le (Google)
+      \item Bernhard Schalkopf
+      \item Francis Bach
+      \item Rob Fergus (Facebook)
+      \item Antonio Torralba (IBM)
+      \item Hugo Larochelle (Google)
+      \item Pietro Perona
+      \item Alex Smola (AWS)
+    \end{itemize}  
+  \end{minipage}
 \end{frame}
 
 \begin{frame}{Acteurs business du machine learning}
@@ -35,7 +89,7 @@
 
 \begin{frame}{Acteurs business}
   IBM, Watson et Jeopardy en 2010
-  \V{["img/jeopardy-watson", "tw", 0.6] | image}
+  \V{["img/jeopardy-watson", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Acteurs business --- IBM Watson}
