--- a/shared/latex/sectors/intro.tex
+++ b/shared/latex/sectors/intro.tex
@@ -53,6 +53,8 @@
 
 \begin{frame}
   \frametitle{Les secteurs impactés}
-  Journalisme
-  \V{["img/jt-chine", "tw", 0.8] | image}
+  \textbf{Journalisme}
+  
+  Journal télévisé chinois présenté par une intelligence artificielle :
+  \bluelink{https://www.bbc.com/news/technology-46136504}{BBC : "China's Xinhua agency unveils AI news presenter"}
 \end{frame}
