Nouvelles images libres pour la section 'sectors' + yml

--- a/shared/latex/sectors/sante.tex
+++ b/shared/latex/sectors/sante.tex
@@ -62,7 +62,7 @@
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.34\linewidth}
-    \V{["img/oeil-coupe", "tw", 0.8] | image}
+    \V{["img/diagramme-oeil", "tw", 1] | image}
   \end{minipage}\hfill
 \end{frame}
 
