--- a/shared/latex/sectors/transport.tex
+++ b/shared/latex/sectors/transport.tex
@@ -22,7 +22,7 @@
 \end{frame}
 
 \begin{frame}{Voiture autonome ⋅ Capteurs}
-  \V{["img/voiture-autonome", "tw", 0.8] | image}
+  \V{["img/voiture-autonome-capteurs", "tw", 0.9] | image}
 \end{frame}
 
 \begin{frame}{Voiture autonome ⋅ 2004 --- DARPA Grand Challenge}
@@ -78,7 +78,24 @@
 
 \begin{frame}
   \frametitle{Voiture autonome ⋅ Impact}
-  \V{["img/voiture-autonome-changements", "tw", 1] | image}
+  \begin{minipage}{0.49\linewidth}
+    \begin{itemize}
+      \item Voiture-service
+      \item Moins de voiture
+      \item Plateformisation
+      \item Gestion du temps
+      \item Transport et villes intelligents
+    \end{itemize}
+  \end{minipage}
+  \begin{minipage}{0.49\linewidth}
+    \begin{itemize}
+      \item Assurances
+      \item Immobilier
+      \item Travail et loisir
+      \item Énergies renouvelables
+      \item Personnalisation numérique
+    \end{itemize}
+  \end{minipage}
 \end{frame}
 
 \begin{frame}{Automobile --- pas seulement la voiture autonome}
@@ -100,7 +117,7 @@
   \item Maintenance préventive par classification d'images (rails, caténaires, isolateurs, materiel roulant, végétation ...)
   \item Relation client
   \end{itemize}
-  \V{["img/rail-detect-defauts", "tw", 0.8] | image}
+  \V{["img/rail-defects-detection", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}
@@ -118,7 +135,7 @@
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[c]{0.49\linewidth}
-    \V{["img/avion-intelligent", "tw", 0.8] | image}
+    \V{["img/drone", "tw", 1] | image}
   \end{minipage}\hfill
 \end{frame}
 
