--- a/shared/latex/sectors/coding.tex
+++ b/shared/latex/sectors/coding.tex
@@ -1,6 +1,6 @@
 \begin{frame}{Informatique et Machine Learning}
   La mutation du secteur informatique par l'intelligence artificielle
-  \V{["img/it-ai", "tw", 0.8] | image}
+  \V{["img/it-ai", "tw", 0.65] | image}
 \end{frame}
 
 \begin{frame}{Informatique et Machine Learning}
@@ -12,7 +12,7 @@
   2018 était l'année du Machine Learning en cybersécurité (Mc Afee)
 
   Outils ML en cybersécurité : 10\% à 60\% en 2020 (Gartner)
-  \V{["img/Machine-Learning-Cybersécurité", "tw", 0.8] | image}
+  \V{["img/ml-cybersecurite", "tw", 0.7] | image}
 \end{frame}
 
 \begin{frame}{Informatique et Machine Learning}
