--- a/shared/latex/sectors/sante.tex
+++ b/shared/latex/sectors/sante.tex
@@ -93,7 +93,7 @@
   \newline
   \begin{minipage}[c]{0.49\linewidth}
     \begin{itemize}
-    \item Énorme problème de dimensionalité
+    \item Énorme problème de dimensionnalité
     \item Cycle de vie des gènes
     \item Analyse de corrélation entre génome et phénotype
     \end{itemize}
@@ -118,30 +118,35 @@
 
 \begin{frame}{Thérapie}
   Découverte de molécules (ReLeaSe, ...) 
-  \V{["img/molecule-release", "tw", 0.8] | image}
+  \V{["img/molecule-discovery", "th", 0.65] | image}
 \end{frame}
 
 \begin{frame}{Thérapie}
   Modélisation de molécules (DeepMind)
-  \V{["img/foldit", "tw", 0.8] | image}
+  \V{["img/alphafold", "tw", 1] | image}
 \end{frame}
 
 \begin{frame}{Thérapie}
-  \begin{minipage}[c]{0.49\linewidth}
-    Simulation biologiques de l'effet de médicaments (IKTOS, Atomwise, ...)
-  \end{minipage}\hfill
-  \begin{minipage}[c]{0.49\linewidth}
-    \V{["img/iktos-drug-design", "tw", 0.8] | image}
-  \end{minipage}\hfill
-\end{frame}
-
-\begin{frame}{Thérapie}
-  Robo-chirurgien Smart Tissue Autonomous Robot (STAR)
+  Simulation biologiques de l'effet de médicaments 
   \begin{itemize}
-    \item Sutures automatiques en 2014
-    \item Appendicetomie autonome en 2016
-    \item Meilleure précision que les chirurgiens
-    \end{itemize}
+    \item IKTOS
+    \item Atomwise
+    \item \dots
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Thérapie}
+  \begin{minipage}{0.49\linewidth}
+    Robo-chirurgien Smart Tissue Autonomous Robot (STAR)
+    \begin{itemize}
+      \item Sutures automatiques en 2014
+      \item Appendicetomie autonome en 2016
+      \item Meilleure précision que les chirurgiens
+      \end{itemize}
+  \end{minipage}
+  \begin{minipage}{0.49\linewidth}
+    \V{["img/robot-chirurgien", "th", 0.7] | image}
+  \end{minipage}
 \end{frame}
 
 \begin{frame}{Thérapie}
