modif mineurz : redimensionnements d'image

--- a/shared/latex/bayesian/bayes-networks.tex
+++ b/shared/latex/bayesian/bayes-networks.tex
@@ -22,13 +22,19 @@
 
 \begin{frame}
   \frametitle{Réseaux Bayésiens : Utilisations}
-  \begin{itemize}
-  \item Diagnostique médical
-  \item Diagnostique machine
-  \item Analyse de risque
-  \item Prédiction supervisée
-  \item Détection d'anomalie
-  \item ...
-  \end{itemize}
-  \V{["tikz/graph/oriented", "th", 0.4] | image}
+  \begin{columns}
+    \begin{column}{0.5\linewidth}
+      \begin{itemize}
+      \item Diagnostique médical
+      \item Diagnostique machine
+      \item Analyse de risque
+      \item Prédiction supervisée
+      \item Détection d'anomalie
+      \item ...
+      \end{itemize}
+    \end{column}
+    \begin{column}{0.5\linewidth}
+      \V{["tikz/graph/oriented", "tw", 0.6] | image}
+    \end{column}
+  \end{columns}
 \end{frame}
