--- a/shared/latex/bayesian/markov-model.tex
+++ b/shared/latex/bayesian/markov-model.tex
@@ -39,21 +39,28 @@
 \end{frame}
 
 \begin{frame}{Utilisations}
-  \begin{itemize}
-  \item Modèle génératif de séquence
-  \item Prédiction de classe : un modèle par classe
-  \item Découverte de pattern
-  \end{itemize}
-  \V{["tikz/markov/simple", "th", 0.6] | image}
+  \begin{minipage}{0.49\linewidth}
+    \begin{itemize}
+    \item Modèle génératif de séquence
+    \item Prédiction de classe : un modèle par classe
+    \item Découverte de pattern
+    \end{itemize}
+  \end{minipage}
+  \begin{minipage}{0.49\linewidth}
+    \V{["tikz/markov/simple", "tw", 1] | image}
+  \end{minipage}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Markov Model}
-  Des applications où c'est efficace (malgré des limitations évidentes):
-  \begin{itemize}
-  \item Premières approximations météo
-  \item Thermodynamique
-  \item Théorie des files d'attente (télécommunication)
-  \end{itemize}
-  \V{["tikz/markov/simple", "th", 0.6] | image}
+\begin{frame}{Markov Model}
+  \begin{minipage}{0.49\linewidth}
+    Des applications où c'est efficace (malgré des limitations évidentes):
+    \begin{itemize}
+    \item Premières approximations météo
+    \item Thermodynamique
+    \item Théorie des files d'attente (télécommunication)
+    \end{itemize}
+  \end{minipage}
+  \begin{minipage}{0.49\linewidth}
+    \V{["tikz/markov/simple", "tw", 1] | image}
+  \end{minipage}
 \end{frame}
