le retour du BG du ml + ajout liens vers articles de presse pour big-questions

--- a/shared/latex/big-questions/ethics.tex
+++ b/shared/latex/big-questions/ethics.tex
@@ -40,7 +40,8 @@
 \end{frame}
 
 \begin{frame}{Reconnaissance faciale}
-  \V{["img/chine-reco-face-fail", "tw", 1] | image}
+  \V{["img/chine-reco-face-fail", "tw", 0.9] | image}
+  \bluelink{https://www.01net.com/actualites/quand-la-reconnaissance-faciale-chinoise-confond-une-pub-avec-un-contrevenant-1572817.html}{Article \emph{01net}~: Quand la reconnaissance faciale chinoise confond une pub avec un contrevenant}
 \end{frame}
 
 \begin{frame}{Automatisation du processus de recrutement}
