--- a/shared/latex/big-questions/generic.tex
+++ b/shared/latex/big-questions/generic.tex
@@ -47,13 +47,19 @@
 \end{frame}
 
 \begin{frame}{Recrutement}
-  Les \textbf{ingénieurs en machine learning} (compétents) coûtent cher :
-  \begin{itemize}
-    \item git clone d'un papier + jouer avec data $\neq$ data-scientist
-    \item au croisement de l'ingénérie (traitement de gros volumes de données, standard de développement) et des mathématiques (statistiques, algèbre, optimisation)
-    \item Le nombre de nouveaux diplomés ne suit pas la demande
-    \item Les meilleurs sont/vont dans une poignée d'entreprises ! (ou presque...)
-  \end{itemize}
+  \begin{minipage}{0.62\linewidth}
+    Les \textbf{ingénieurs en machine learning} (compétents) coûtent cher :
+    \begin{itemize}
+      \item git clone d'un papier + jouer avec data $\neq$ data-scientist
+      \item au croisement de l'ingénérie (traitement de gros volumes de données, standard de développement) et des mathématiques (statistiques, algèbre, optimisation)
+      \item Le nombre de nouveaux diplomés ne suit pas la demande
+      \item Les meilleurs sont/vont dans une poignée d'entreprises ! (ou presque...)
+    \end{itemize}
+  \end{minipage}
+  \begin{minipage}{0.37\linewidth}
+    \V{["img/data-scientist-star", "tw", 1] | image}
+    \bluelink{https://www.lefigaro.fr/secteur/high-tech/2017/09/29/32001-20170929ARTFIG00274-du-parfum-a-la-voiture-l-intelligence-artificielle-sert-a-vendre-de-tout.php}{Article \emph{Le Figaro} : Du parfum à la voiture, l'intelligence artificielle sert à vendre de tout}
+  \end{minipage}
 \end{frame}
 
 \begin{frame}{Acceptation}
