mv sparks-formations/lpy/ to sparks-formations/npy/; update some img/logos/.

--- a/shared/latex/big-questions/legal.tex
+++ b/shared/latex/big-questions/legal.tex
@@ -16,7 +16,7 @@
 
 \begin{frame}{RGPD}
   Introduit en 2018 par le parlement européen.
-  \V{["img/rgpd", "tw", 0.8] | image}
+  \V{["img/logos/rgpd", "tw", 0.8] | image}
 \end{frame}
 
 \begin{frame}{Loi bioéthique}
