--- a/shared/latex/en/nn/rnn/rnn-variants.tex
+++ b/shared/latex/en/nn/rnn/rnn-variants.tex
@@ -33,6 +33,6 @@
   \end{itemize}
 \end{frame}
 
-\fmg{\begin{frame}{Other variants}
+\begin{frame}{Other variants}
   \V{["img/spaghetti", "tw", 1] | image}
-\end{frame}}
+\end{frame}
