--- a/shared/latex/nlp/preprocessing.tex
+++ b/shared/latex/nlp/preprocessing.tex
@@ -66,13 +66,13 @@
   \V{["img/dbpedia", "tw", 0.9] | image}
 \end{frame}
 
-\fmg{\begin{frame}
+\begin{frame}
   \frametitle{Utilisation actuelle}
   \V{["img/chatbot", "tw", 0.9] | image}
-\end{frame}}
+\end{frame}
 
-\fmg{\begin{frame}
+\begin{frame}
   \frametitle{Maintenabilité}
   \V{["img/usine-a-gaz", "tw", 0.9] | image}
-\end{frame}}
+\end{frame}
 
