--- a/shared/latex/nn/rnn/variants.tex
+++ b/shared/latex/nn/rnn/variants.tex
@@ -33,6 +33,6 @@
   \end{itemize}
 \end{frame}
 
-\fmg{\begin{frame}{D'autres variantes}
+\begin{frame}{D'autres variantes}
   \V{["img/spaghetti", "tw", 1] | image}
-\end{frame}}
+\end{frame}
