--- a/shared/latex/nn/transformer/model.tex
+++ b/shared/latex/nn/transformer/model.tex
@@ -1,6 +1,6 @@
-\fmg{\begin{frame}{Réseaux transformeurs}
+\begin{frame}{Réseaux transformeurs}
   \V{["img/transformer-fun", "tw", 0.9] | image}
-\end{frame}}
+\end{frame}
 
 \begin{frame}{Vue générale}
   \V{["img/transformer-network-1", "tw", 0.9] | image}
