Fix raccourci & add todo
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/data-science/numpy.tex
+++ b/shared/latex/python/data-science/numpy.tex
@@ -62,6 +62,8 @@
   \mintedcustomcode{python/data-science/indexing-slicing}{pycon}
 \end{frame}
 
-\begin{frame}{Indiçage dans un tableau ⋅ Raccourcis}
+\begin{frame}{Indiçage dans un tableau ⋅ Raccourci}
   \mintedcustomcode{python/data-science/indexing-shortcuts}{pycon}
 \end{frame}
+
+% TODO Broadcast, map et compagnie
