--- a/shared/latex/python/data-science/matplotlib.tex
+++ b/shared/latex/python/data-science/matplotlib.tex
@@ -37,16 +37,51 @@
 \end{frame}
 
 \begin{frame}{Différents types de plot : \texttt{bar(x, y)}}
+    \begin{minipage}[t]{0.49\linewidth}
+        \mintedcustomcode{python/data-science/matplotlib/bar}{py}
+    \end{minipage}
+    \begin{minipage}[t]{0.49\linewidth}
+        \vfill
+        \V{["plt/mpl/bar", "tw", 1] | image} 
+    \end{minipage}
 \end{frame}
 
 \begin{frame}{Différents types de plot : \texttt{imshow(Z)}}
+    \begin{minipage}[t]{0.49\linewidth}
+        \mintedcustomcode{python/data-science/matplotlib/imshow}{py}
+    \end{minipage}
+    \begin{minipage}[t]{0.49\linewidth}
+        \vfill
+        \V{["plt/mpl/imshow", "tw", 1] | image} 
+    \end{minipage}
 \end{frame}
 
 \begin{frame}{Différents types de plot : \texttt{contour(X, Y, Z)}}
+    \begin{minipage}[t]{0.49\linewidth}
+        \mintedcustomcode{python/data-science/matplotlib/contour}{py}
+    \end{minipage}
+    \begin{minipage}[t]{0.49\linewidth}
+        \vfill
+        \V{["plt/mpl/contour", "tw", 1] | image} 
+    \end{minipage}
 \end{frame}
 
 \begin{frame}{Différents types de plot : \texttt{hist(x)}}
+    \begin{minipage}[t]{0.49\linewidth}
+        \mintedcustomcode{python/data-science/matplotlib/hist}{py}
+    \end{minipage}
+    \begin{minipage}[t]{0.49\linewidth}
+        \vfill
+        \V{["plt/mpl/hist", "tw", 1] | image} 
+    \end{minipage}
 \end{frame}
 
 \begin{frame}{Différents types de plot : \texttt{boxplot(X)}}
+    \begin{minipage}[t]{0.49\linewidth}
+        \mintedcustomcode{python/data-science/matplotlib/boxplot}{py}
+    \end{minipage}
+    \begin{minipage}[t]{0.49\linewidth}
+        \vfill
+        \V{["plt/mpl/boxplot", "tw", 1] | image} 
+    \end{minipage}
 \end{frame}
